# vpm-repos-gen

./: .editorconfig  Cargo.toml  Cross.toml  README.md  renovate.json
.github/workflows/: actionlint.yml  ci.yml  release.yml  validate-renovate.yml
src/: args.rs  cache.rs  error.rs  generator.rs  github.rs  github_repo.rs  http.rs  main.rs  package_json.rs  release_tag.rs  vpm.rs
src/package_json/: name.rs
