[package]
name = "vpm-repos-gen"
version = "1.6.2"
authors = ["koyashiro <develop@koyashi.ro>"]
edition = "2021"
description = "vpm repos generator."
readme = "README.md"
homepage = "https://github.com/koyashiro/vpm-repos-gen"
repository = "https://github.com/koyashiro/vpm-repos-gen"
license = "MIT OR Appach-2.0"
keywords = ["vpm"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "cargo", "env"] }
dirs = "5.0.1"
octocrab = { version = "0.36.0" }
regex = "1.10.4"
reqwest = { version = "0.12.1", default-features = false, features = ["json", "rustls-tls"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
